Publish in gh-pages

--- a/404.html
+++ b/404.html
@@ -22,7 +22,7 @@
 <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="My Blog" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://example.org/404.html" />
+<meta property="og:url" content="http://josete89.github.io/404.html" />
 
 
 
@@ -77,7 +77,7 @@
     <nav>
       <ul class="sidebar-nav">
         <li>
-          <a href="http://example.org/">Home</a>
+          <a href="http://josete89.github.io">Home</a>
         </li>
         <li>
           <a href="/posts/">Posts</a>
