--- a/404.html
+++ b/404.html
@@ -60,7 +60,19 @@
   <link rel="shortcut icon" href="/favicon.png">
 
   
-  </head>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/avicon-16x16.png">
+	<link rel="manifest" href="/favicon_io/site.webmanifest">
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-170866588-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-170866588-1');
+	</script>
+</head>
 <body>
   <aside class="sidebar">
   <div class="container">
