--- a/index.html
+++ b/index.html
@@ -61,7 +61,19 @@
 
   
   <link href="http://josete89.github.io/index.xml" rel="alternate" type="application/rss+xml" title="Jose Luis Alcala" />
-  </head>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/avicon-16x16.png">
+	<link rel="manifest" href="/favicon_io/site.webmanifest">
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-170866588-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-170866588-1');
+	</script>
+</head>
 <body>
   <aside class="sidebar">
   <div class="container">
@@ -114,7 +126,8 @@
       </header>
       <div class="homepage-content">
         
-        <p>Welcome you just found my blog! I&rsquo;m writing about software engineering and
+        <p>You just found my blog! I&rsquo;m a passionate software engineer, a technology nomad
+(I went from backend, to mobile, to machine learning) and a soccer fan. In this space I&rsquo;m writing about software engineering and
 other stories relevant to code, machine learning and team management.</p>
 
       </div>
