--- a/series/index.html
+++ b/series/index.html
@@ -12,15 +12,15 @@
   
 
 <meta itemprop="name" content="Series">
-<meta itemprop="description" content="My Blog">
+<meta itemprop="description" content="Jose Luis Alcala">
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Series"/>
-<meta name="twitter:description" content="My Blog"/>
+<meta name="twitter:description" content="Jose Luis Alcala"/>
 
 
 <meta property="og:title" content="Series" />
-<meta property="og:description" content="My Blog" />
+<meta property="og:description" content="Jose Luis Alcala" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="http://josete89.github.io/series/" />
 
@@ -83,7 +83,7 @@
       <h1>Jose Luis Alcala</h1>
 
       
-      <p class="lead">My Blog</p>
+      <p class="lead">Jose Luis Alcala</p>
       
     </div>
 
