--- a/404.html
+++ b/404.html
@@ -12,15 +12,15 @@
   
 
 <meta itemprop="name" content="404 Page not found">
-<meta itemprop="description" content="Jose Luis Alcala">
+<meta itemprop="description" content="My blog">
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content="Jose Luis Alcala"/>
+<meta name="twitter:description" content="My blog"/>
 
 
 <meta property="og:title" content="404 Page not found" />
-<meta property="og:description" content="Jose Luis Alcala" />
+<meta property="og:description" content="My blog" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="http://josete89.github.io/404.html" />
 
@@ -82,7 +82,7 @@
       <h1>Jose Luis Alcala</h1>
 
       
-      <p class="lead">Jose Luis Alcala</p>
+      <p class="lead">My blog</p>
       
     </div>
 
