--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         sizes="144x144"
         href="/apple-touch-icon-144-precomposed.png">
 
-  <link rel="shortcut icon" href="/favicon.png">
+  <link rel="shortcut icon" href="/favicon.ico">
 
   
   <link href="http://josete89.github.io/index.xml" rel="alternate" type="application/rss+xml" title="Jose Luis Alcala" />
@@ -65,6 +65,7 @@
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 	<link rel="manifest" href="/site.webmanifest">
+	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-170866588-1"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
@@ -153,5 +154,20 @@ other stories relevant to code, machine learning and team management.</p>
   <script src="/js/blog.js"></script>
 
   
+	<script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
+	<script>
+	window.cookieconsent.initialise({
+		"palette": {
+			"popup": {
+				"background": "#eaf7f7",
+				"text": "#5c7291"
+			},
+			"button": {
+				"background": "#56cbdb",
+				"text": "#ffffff"
+			}
+		}
+	});
+	</script>
 </body>
 </html>
