--- a/404.html
+++ b/404.html
@@ -57,13 +57,14 @@
         sizes="144x144"
         href="/apple-touch-icon-144-precomposed.png">
 
-  <link rel="shortcut icon" href="/favicon.png">
+  <link rel="shortcut icon" href="/favicon.ico">
 
   
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 	<link rel="manifest" href="/site.webmanifest">
+	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-170866588-1"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
@@ -144,5 +145,20 @@
   <script src="/js/blog.js"></script>
 
   
+	<script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
+	<script>
+	window.cookieconsent.initialise({
+		"palette": {
+			"popup": {
+				"background": "#eaf7f7",
+				"text": "#5c7291"
+			},
+			"button": {
+				"background": "#56cbdb",
+				"text": "#ffffff"
+			}
+		}
+	});
+	</script>
 </body>
 </html>
